# gmail-forward

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
src/: auth.py  config.py  filter_engine.py  forwarder.py  gmail_client.py  imap_client.py  main.py  state.py
