[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-forward"
version = "0.2.0"
description = "Gmail 条件转发工具 - 根据规则自动转发邮件"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
gmail-forward = "src.main:main"
